- Mise en place de la pagination sur la homePage

--- a/Backend/todo
+++ b/Backend/todo
@@ -5,3 +5,8 @@
 - Confirmation pour les action sensible
 - Responsivité
 - banniere pour les articles
+
+- améliorrer l'ergonomie image
+- resize
+- nom des type dans la barre latérale
+- ajouter triangle dropdown
