- Ajout de croppersJs pour le resize des images

--- a/Backend/todo
+++ b/Backend/todo
@@ -1,7 +1,7 @@
 - Appliquer le ban
 - Améliorré le design des commentaires
 - Suppression du compte
-- Pagination
+- Pagination page admin user et admin comment
 - Confirmation pour les action sensible
 - Responsivité
 - banniere pour les articles
