BACKEND + FRONTEND - Ajout header image pour les articles - Ajout du texte dans la sidebarre - Amélioration du design pour le header article

--- a/Backend/todo
+++ b/Backend/todo
@@ -1,8 +1,6 @@
 - Améliorré le design des commentaires
+- Créer un component confirmDialogue
 - Application de la suppression de compte
 - Responsivité
-- banniere pour les articles
-
-- améliorrer l'ergonomie image
-- resize photo de profil
-- nom des type dans la barre latérale
+- autoriser la suppression qu'a l'auteur d'un post
+- reset le cropper apres modification du profif
