BACKEND + FRONTEND - reset du cropper quand updateProfil - refactoring du code qui ajoute l'image cropped dans le formData - création d'un component pour la confirmAction

--- a/Backend/todo
+++ b/Backend/todo
@@ -1,6 +1,4 @@
 - Améliorré le design des commentaires
-- Créer un component confirmDialogue
 - Application de la suppression de compte
 - Responsivité
-- autoriser la suppression qu'a l'auteur d'un post
-- reset le cropper apres modification du profif
+- autoriser la suppression qu'a l'auteur d'un post ou à l'admin
