--- a/Backend/todo
+++ b/Backend/todo
@@ -1,7 +1,6 @@
-- Responsivité
+- Responsivité - Profil, AddArticle, AddPost, Admin, Login, Register
 - corriger test dans le Backend
 - améliorré le design de la page de connexion et d'inscription
-- distinction entre commentaire et reponse dans l'admin
 
 point a éclaircir:
 - les utilisateurs doivent pouvoir facilement repérer les dernières participations des employés
