FRONTEND + BACKEND - Ajout du profil utilisateur
FRONTEND
- Création d'un components pour les posts

BACKEND
- Correction des trois premiers tests (auth)

--- a/Backend/todo
+++ b/Backend/todo
@@ -1,7 +1,8 @@
-- Responsivité - Profil, AddArticle, AddPost, Admin, Login, Register
+- Responsivité - Home Comment, Profil, AddArticle, AddPost, Admin, Login, Register
 - corriger test dans le Backend
 - améliorré le design de la page de connexion et d'inscription
-
-point a éclaircir:
-- les utilisateurs doivent pouvoir facilement repérer les dernières participations des employés
+- reset input file quand on annule l'image (avatar, banner article)
+- afficher la barre de pagination que s'il y a deux pages.
+- profil utilisateur
 - Application de la suppression de compte
+- enregistré le type de post voulu dans les params
