FRONTEND - nettoyage du commentSore

--- a/Backend/todo
+++ b/Backend/todo
@@ -3,9 +3,11 @@
 - faire une transaction pour la suppression d'un compte
 - nettoyé le store principal
 - simplifier le code des commentaires
-
-FONCTION A AJOUTER ?
-- recherche d'utilisateur home et admin
-- notif new message / post utilisateur
-- suppression / update message
+- slug pour les fiches article
+- suppression du param user pour l'update du profil
+- faire le seeder pour les likes / answers
+- animation sidebarre + changé l'icon quand la sidebarre est visible sur mobile
 - ajouté les droits de modérations a quelqu'un
+- recherche d'utilisateur home et admin
+- suppression / update message
+- favicone + nom de page
