BACKEND - mise en place de role admin et modo - ajout de last name et first name pour les users - correction bug connection lorque la date de ban est null - mise ne place de la recherche user et admin - mise ne place d'index pour lastname et firstname user FRONTEND - mise en place des snackbarre erreur - mise en place du titre des pages - chagement de la favicone - attribution et supression du role modo - modification du searchStore pour admin_search - connexion lorsque l'on appuie sur enter - suppression des Vues inuties

--- a/Backend/todo
+++ b/Backend/todo
@@ -3,10 +3,5 @@
 - faire une transaction pour la suppression d'un compte + debug supp profil
 - nettoyé le store principal
 - faire le seeder pour les likes / answers
-- animation sidebarre + changé l'icon quand la sidebarre est visible sur mobile
-- ajouté les droits de modérations a quelqu'un
-- recherche d'utilisateur home et admin
 - suppression / update message
-- favicone + nom de page
-- login quand enter
-- regex route profil et post show
+- regex route profile et post show
