BACKEND - mise en place de la transaction pour la suppression d'un utilisateur - création des seeders likes et answers - création d'un function getRandomUniqInt
FRONTEND
- ajout d'un bouton close dans le modal de création d'image
- nettoyage du store
-

--- a/Backend/todo
+++ b/Backend/todo
@@ -1,7 +1,7 @@
-- Responsivité - AddArticle, AddPost, Post
+- Responsivité - Add/Update Article, Post
 - design Post
-- faire une transaction pour la suppression d'un compte + debug supp profil
-- nettoyé le store principal
-- faire le seeder pour les likes / answers
 - suppression / update message
 - regex route profile et post show
+- corriger la page admin
+
+- mettre en place un docker et regarder comment fonctionne les docker compose
