--- a/Backend/todo
+++ b/Backend/todo
@@ -1,7 +1,5 @@
-- Responsivité - Add/Update Article, Post
+- Responsivité - Add/Update Article, Post, update delete comment
 - design Post
-- suppression / update message
 - regex route profile et post show
-- corriger la page admin
 
 - mettre en place un docker et regarder comment fonctionne les docker compose
