--- a/Backend/todo
+++ b/Backend/todo
@@ -1,5 +1,6 @@
 - Responsivité - Add/Update Article, Post, update delete comment
-- design Post
-- regex route profile et post show
+- Traduire les erreurs form article, image, password et avatar
+- Verrifier les slug et id coté front
+- Verrifier les inputs des forms coté front
 
 - mettre en place un docker et regarder comment fonctionne les docker compose
