BACKEND - suppression du dossier temp - ignorer la suppression d'un fichier si il n'est pas présent - correction des bugs de defaultValues pour les models Post et User - création du fichier images dans Dockerfile avec les sous dossiers - création des scripts migrate et seed FRONTEND - ajout d'un htaccess - correction du bug qui excécuté le script de validation d'ajout d'image - correction du bug de redirection lors de l'inscription
Ajout du Readme

--- a/Backend/todo
+++ b/Backend/todo
@@ -1,2 +1,3 @@
-- Verrifier les inputs des forms coté front
-- mettre en place un docker et regarder comment fonctionne les docker compose
+- design answer mobile
+- design bouton post image
+- Doc API
